--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ VITE_START_ENV=local
 # testnet | mainnet
 VITE_BLOCKCHAIN_ENV=testnet
 
+# XRPL json rpc / ws endpoint
+VITE_XRPL_JSON_RPC_TEST_NET=https://s.altnet.rippletest.net:51234/
+VITE_XRPL_WSS_TEST_NET=wss://s.altnet.rippletest.net:51233/
+
+# XRPL json rpc / ws endpoint
+VITE_XUMM_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+VITE_XUMM_API_SECRET=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
