--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-router-dom": "^6.14.2",
     "tinycolor2": "^1.6.0",
     "usehooks-ts": "^2.9.1",
+    "xrpl": "^2.10.0",
+    "xumm": "^1.5.5",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/runtime": "^7.22.6",
     "@emotion/babel-plugin-jsx-pragmatic": "^0.2.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@storybook/addon-essentials": "^7.1.1",
     "@storybook/addon-viewport": "^7.2.3",
     "@storybook/builder-vite": "^7.1.1",
@@ -56,15 +59,21 @@
     "@yarnpkg/pnpify": "^4.0.0-rc.48",
     "babel-plugin-auto-import": "^1.1.0",
     "babel-plugin-macros": "^3.1.0",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-visualizer": "^5.9.2",
     "storybook": "^7.1.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.3",
     "twin.macro": "^3.3.1",
     "typescript": "^5.1.6",
