--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3-format": "^3.1.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.2.1",
     "immer": "^10.0.2",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
