fix type, add cbdc create function

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,10 @@ VITE_XRPL_WSS_TEST_NET=wss://s.altnet.rippletest.net:51233/
 # XRPL json rpc / ws endpoint
 VITE_XUMM_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 VITE_XUMM_API_SECRET=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
+# WALLET_SEED
+VITE_BSD_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+VITE_ENA_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+VITE_KRW_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+VITE_USTB_MASTER_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
