feat: mint ustb with admin page

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,4 @@ VITE_ENA_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 VITE_KRW_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 VITE_USTB_MASTER_WALLET_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+VITE_USTB_MINTER_SEED=sXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
