update deploy script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_EC2_METADATA_DISABLED: true
         run: |
-          aws s3 sync dist s3://${{ secrets.S3_BUCKET }}
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_ID }}  --paths '/*'
+          aws s3 sync dist s3://${{ vars.S3_BUCKET }}
+          aws cloudfront create-invalidation --distribution-id ${{ vars.CLOUDFRONT_ID }}  --paths '/*'
